@@ -1,4 +1,4 @@
-__version__ = "4.0.35"
+__version__ = "4.0.36"
 
 __authors__ = [
     "Juan Miguel Taboada Godoy <juanmi@juanmitaboada.com>",
